// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderizar cuando hay solo 1 película 1`] = `
<ol>
  <li>
    Shrek
  </li>
</ol>
`;

exports[`renderizar cuando hay varias películas 1`] = `
<ol>
  <li>
    Bañeros 1
  </li>
  <li>
    Bañeros 2
  </li>
  <li>
    Bañeros 3
  </li>
</ol>
`;

exports[`renderizar mensaje cuando no hay peliculas 1`] = `"No se encontraron películas"`;
